tests/fail/namespace-obj1.dit
A {
    String value;
}

A a;

a = 'test';